--- a/app/globals.css
+++ b/app/globals.css
@@ -1,13 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200');
   
 :root {
-
+  --primary-color: #1da1f2;
 }
 
 
 body {
   /* font-family: 'Playfair Display', serif; */
 }
+
+.bg-main {
+  background-color: var(--primary-color);
+}
+
